--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "lxml (>=6.0.2,<7.0.0)"
+    "lxml (>=6.0.2,<7.0.0)",
+    "xmlschema (>=4.2.0,<5.0.0)"
 ]
 
 
